# cmd/api/users.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"net/http"
 
+	"github.com/go-chi/chi/v5"
 	"github.com/sumit8974/finance-tracker/internal/store"
 )
 
@@ -27,7 +28,8 @@ type GetUserByTokenResponse struct {
 //	@Failure		401	{object}	error
 //	@Failure		500	{object}	error
 //	@Router			/users/token [get]
-// @Security		ApiKeyAuth
+//
+//	@Security		ApiKeyAuth
 func (app *application) getUserByTokenHandler(w http.ResponseWriter, r *http.Request) {
 	user := getUserFromContext(r)
 	if user == nil {
@@ -36,9 +38,40 @@ func (app *application) getUserByTokenHandler(w http.ResponseWriter, r *http.Req
 		return
 	}
 	userDetails := &GetUserByTokenResponse{
-		User:  user,
+		User: user,
 	}
 	if err := app.jsonResponse(w, http.StatusOK, userDetails); err != nil {
 		app.logger.Errorw("failed to write response", "error", err)
+	}
+}
+
+// activateUserHander godoc
+//
+//	@Summary		Activate user
+//	@Description	Acitvate a new user account
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			token	path		string	true	"User invitation token"
+//	@Success		204		{string}	string	"User activated"
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/users/activate/{token} [put]
+func (app *application) activateUserHandler(w http.ResponseWriter, r *http.Request) {
+	token := chi.URLParam(r, "token")
+
+	err := app.store.Users.Activate(r.Context(), token)
+
+	if err != nil {
+		switch err {
+		case store.ErrNotFound:
+			app.notFoundResponse(w, r, err)
+		default:
+			app.internalServerError(w, r, err)
+		}
+		return
+	}
+	if err := app.jsonResponse(w, http.StatusNoContent, ""); err != nil {
+		app.internalServerError(w, r, err)
 	}
 }
